# pico-sdk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  device_request.yml  feature_request.yml
.github/workflows/: build-examples.yml  codeql.yml  release.yml
docs/: API_REFERENCE.md  Architecture.md  QUICK_START.md  TROUBLESHOOTING.md
examples/airqualitysensor/: CMakeLists.txt  main.c
examples/blinds/: CMakeLists.txt  main.c
examples/contact_sensor/: CMakeLists.txt  main.c
examples/dimswitch/: CMakeLists.txt  main.c
examples/doorbell/: CMakeLists.txt  main.c
examples/fan/: CMakeLists.txt  main.c
examples/garagedoor/: CMakeLists.txt  main.c
examples/light/: CMakeLists.txt  main.c
examples/lock/: CMakeLists.txt  main.c
examples/motion_sensor/: CMakeLists.txt  main.c
examples/powersensor/: CMakeLists.txt  main.c
examples/switch/: CMakeLists.txt  main.c
examples/temperature_sensor/: CMakeLists.txt  main.c
include/: lwipopts.h  mbedtls_config.h
include/sinricpro/: event_limiter.h  sinricpro.h  sinricpro_airqualitysensor.h  sinricpro_blinds.h  sinricpro_config.h  sinricpro_contact_sensor.h  sinricpro_device.h  sinricpro_dimswitch.h  sinricpro_doorbell.h  sinricpro_fan.h  sinricpro_garagedoor.h  sinricpro_light.h  sinricpro_lock.h  sinricpro_motion_sensor.h  sinricpro_powersensor.h  sinricpro_switch.h  sinricpro_temperature_sensor.h
include/sinricpro/capabilities/: air_quality_sensor.h  brightness.h  color.h  color_temperature.h  contact_sensor.h  door_controller.h  doorbell.h  lock_controller.h  motion_sensor.h  power_level.h  power_sensor.h  power_state.h  range_controller.h  temperature_sensor.h
scripts/: build-test.sh
src/capabilities/: air_quality_sensor.c  brightness.c  brightness.h  color.c  color_temperature.c  contact_sensor.c  door_controller.c  doorbell.c  lock_controller.c  motion_sensor.c  power_level.c  power_sensor.c  power_state.c  power_state.h  range_controller.c  temperature_sensor.c
src/core/: event_limiter.c  json_helpers.c  json_helpers.h  message_queue.c  message_queue.h  signature.c  signature.h  sinricpro.c  sinricpro_debug.c  sinricpro_debug.h  websocket_client.c  websocket_client.h
src/devices/: sinricpro_airqualitysensor.c  sinricpro_blinds.c  sinricpro_contact_sensor.c  sinricpro_dimswitch.c  sinricpro_doorbell.c  sinricpro_fan.c  sinricpro_garagedoor.c  sinricpro_light.c  sinricpro_lock.c  sinricpro_motion_sensor.c  sinricpro_powersensor.c  sinricpro_switch.c  sinricpro_temperature_sensor.c
